less/menu.less
#menu-trigger {
	width: 50px;
	height: 35px;
	cursor: pointer;

	.line-wrap .line {
		background-color: #fff;
	}

	&:before {
		content: "";
		position: absolute;
		top: 10px;
		left: 22px;
		width: 40px;
		height: 40px;
		border-radius: 50%;
		background: rgba(255,255,255,.22);
		-webkit-transition: all;
		-moz-transition: all;
		-o-transition: all;
		transition: all;
		-webkit-transition-duration: 300ms;
		transition-duration: 300ms;
		-webkit-backface-visibility: hidden;
		-moz-backface-visibility: hidden;
		backface-visibility: hidden;
		-webkit-transform: scale(0);
		-ms-transform: scale(0);
		-o-transform: scale(0);
		transform: scale(0);
		z-index: 0;
	}

	&.open:before {
		-webkit-transform: scale(1);
		-ms-transform: scale(1);
		-o-transform: scale(1);
		transform: scale(1);
	}
}

.header-menu {
	list-style: none;
	padding: 3px;

	>li {
		display: inline-block;
		vertical-align: -webkit-baseline-middle;

		@media (max-width: @screen-xs-max) {
			position: static!important;
		}

		>a {
			min-width: 40px;
			background-position: center;
			background-repeat: no-repeat;
			position: relative;
			z-index: 1;
			color: #fff;
		    padding: 6px 10px;
		    font-size: 14px;

		    &:hover, &:active, &:focus {
				text-decoration: none;
			}
		}

		&:before {
			top: -1px!important;
		}
	}
}

.top-menu {
	list-style: none;
	padding: 3px;

	>li {
		display: inline-block;
		vertical-align: -webkit-baseline-middle;

		@media (max-width: @screen-xs-max) {
			position: static!important;
		}

		.dropdown-menu-lg {
			padding: 0;

			.lv-body {
				height: 275px;
				overflow-y: auto;
			}
		}
		
		.dropdown-menu {
			margin-top: 5px;
		}

		>a {
			min-width: 40px;
			background-position: center;
			background-repeat: no-repeat;
			position: relative;
			z-index: 1;
			color: #fff;
		    padding: 6px 10px;
		    font-size: 16px;

		    &:hover, &:active, &:focus {
				text-decoration: none;
			}
		}

		&:before {
			top: -1px!important;
		}
	}

	.form-group {
		margin-bottom: 0;

		.form-control {
			height: 33px;
		}
	}
	
	.chats.dropdown {
		.lv-footer {

            hr {
                margin-top: 10px;
                margin-bottom: 10px;
                border-top: @lv-item-border;
            }
        }
        
        .dropdown-menu {
        	padding: 0;
        }
	}
}

@media (min-width: @screen-sm-min) {
	.top-menu>li:not(#toggle-width) {
		position: relative;
	}
	.top-menu>li:not(#toggle-width):before {
		left: 0;
		top: 0;
		content: "";
		position: absolute;
		width: 100%;
		height: 100%;
		background-color: rgba(0, 0, 0, .12);
		z-index: 0;
		border-radius: 2px;
		opacity: 0;
		filter: alpha(opacity=0);
	}
}

@media (max-width: @screen-xs-max) {
	.top-menu .dropdown-menu-lg {
		width: ~"calc(100% - 28px) !important";
	}
	.top-menu .dropdown-menu {
		right: 14px;
		top: 55px;
	}
}

@media (min-width: @screen-lg-min) {
	.top-menu #toggle-width .toggle-switch {
		margin: -12px 30px 0 0;
	}
	.top-menu #toggle-width .toggle-switch .ts-helper {
		height: 11px;
		width: 33px;
	}
	.top-menu #toggle-width .toggle-switch .ts-helper:before {
		width: 20px;
		height: 20px;
		top: -5px;
	}
	.top-menu #toggle-width .toggle-switch input:checked+.ts-helper {
		background: rgba(0, 0, 0, .26);
	}
	.top-menu #toggle-width .toggle-switch input:checked+.ts-helper:before {
		left: 18px;
		background: #fff;
	}
}

@media (max-width: @screen-lg-min) {
	.top-menu #toggle-width {
		display: none;
	}
}

.line-wrap {
    width: 18px;
    height: 12px;
    -webkit-transition: all;
    -moz-transition: all;
    -o-transition: all;
    transition: all;
    -webkit-transition-duration: 300ms;
    transition-duration: 300ms;
    margin: 10px 20px;

    .line {
	    width: 18px;
	    height: 2px;
	    -webkit-transition: all;
	    -moz-transition: all;
	    -o-transition: all;
	    transition: all;
	    -webkit-transition-duration: 300ms;
	    transition-duration: 300ms;
	}

	.line.center {
	    margin: 3px 0;
	}
}

.open .line-wrap {
    -webkit-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    -o-transform: rotate(180deg);
    transform: rotate(180deg);

    .line.top {
	    width: 12px;
	    transform: translateX(8px) translateY(1px) rotate(45deg);
	    -webkit-transform: translateX(8px) translateY(1px) rotate(45deg);
	}

	.line.bottom {
	    width: 12px;
	    transform: translateX(8px) translateY(-1px) rotate(-45deg);
	    -webkit-transform: translateX(8px) translateY(-1px) rotate(-45deg);
	}
}

.unread-count:after {
	content: attr(data-content);
  	position: relative;
	color: #fff;
	font-style: normal;
	background: @material-danger;
	padding: 3px 6px;
    border-radius: 10px;
    left: -8px;
	top: -14px;
	font-size: 11px;
	font-weight: bold;
	-webkit-animation-name: wobble;
	animation-name: wobble;
	-webkit-animation-duration: 500ms;
	animation-duration: 500ms;
	-webkit-animation-fill-mode: both;
	animation-fill-mode: both;
	font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
}

.pagination-block {
	margin-top: 5px;
	margin-right: 15px;
	transition: opacity 250ms ease-in;
	opacity: 0;
	pointer-events: none;
	
	&.ready {
		opacity: 1;
		pointer-events: inherit;
	}

	>div>i, >div>a {
		color: #fff;
	}

	.progress-container {
		height: 2px;
		position: absolute;
		bottom: -5px;
		left: 8px;
		background: #666;
		width: 90%;
		margin: auto;

		.progress-bar {
			background-color: #eee;
			height: 2px;
		}
	}
}

.progress-bar {
	float: left;
	width: 0;
	height: 100%;
	font-size: 12px;
	line-height: 20px;
	color: #fff;
	text-align: center;
	background-color: #337ab7;
	-webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
	-webkit-transition: width .6s ease;
	-o-transition: width .6s ease;
	transition: width .6s ease;
}

#user-control-list {
	i.status {
		width: 12px;
		height: 12px;
		border-radius: 50%;
		position: absolute;
    	margin-top: 3px;
	}
	
	li>a {
		color: @body-color;
		
		&.user-status, &#user-profile-link {
			span {
				padding-left: 20px;
			}
		}
	}
}

[component="user/logout"] {
	span {
		padding-left: 0 !important;
	}
}

#search-form {
	#search-fields {
		.form-control {
			color: #fff;
		}
	}
}

